# src/main/kotlin/no/nav/sokos/skattekort/api/SkattekortPersonAPI.kt
@@ -1,5 +1,6 @@
 package no.nav.sokos.skattekort.api
 
+import io.ktor.http.HttpStatusCode
 import io.ktor.server.request.receive
 import io.ktor.server.response.respond
 import io.ktor.server.routing.Route
@@ -8,16 +9,27 @@ import io.ktor.server.routing.route
 
 import no.nav.sokos.skattekort.api.skattekortpersonapi.v1.SkattekortPersonRequest
 import no.nav.sokos.skattekort.module.skattekort.SkattekortPersonService
-import no.nav.sokos.skattekort.security.AuthToken.getSaksbehandler
+import no.nav.sokos.skattekort.security.AuthToken.getSaksbehandlerOrNull
 
 fun Route.skattekortPersonApi(skattekortPersonService: SkattekortPersonService) {
     route("/api/v1") {
         post("hent-skattekort") {
             val skattekortPersonRequest: SkattekortPersonRequest = call.receive()
-            val saksbehandler = getSaksbehandler(call)
+            val saksbehandler = getSaksbehandlerOrNull(call)
             call.respond(
-                skattekortPersonService.hentSkattekortPerson(skattekortPersonRequest, saksbehandler),
+                skattekortPersonService.hentSkattekortPerson(skattekortPersonRequest.fnr, skattekortPersonRequest.inntektsaar, saksbehandler),
             )
+        }
+        post("sjekk") {
+            val skattekortPersonRequest: SkattekortPersonRequest = call.receive()
+            val saksbehandler = getSaksbehandlerOrNull(call)
+            call.respond(
+                skattekortPersonService.hentSkattekortPerson(skattekortPersonRequest.fnr, skattekortPersonRequest.inntektsaar, saksbehandler).isNotEmpty(),
+            )
+        }
+
+        post("opprett") {
+            call.respond(HttpStatusCode.NotImplemented)
         }
     }
 }
